force-app/main/default/objects/Program__c/fields/Clients__c.field-meta.xml
<CustomField>
    <fullName>Clients__c</fullName>
    <label>Clients</label>
    <inlineHelpText>The total number of Clients tested with objectives in this Program. Calculated by Stats Gatherer. </inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>