force-app/main/default/objects/Program__c/fields/Earliest_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Session_Date__c</fullName>
    <inlineHelpText>The earliest date of a Session that tested an objective in this Program. Calculated by Stats Gatherer.</inlineHelpText>
    <label>Earliest Session Date</label>
    <type>Date</type>
</CustomField>