force-app/main/default/objects/Program__c/fields/Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Incorrect__c</fullName>
    <inlineHelpText>The total number of Incorrect responses for Objectives associated with this Program. Calculated by Stats Gatherer.</inlineHelpText>
    <label>Incorrect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>