force-app/main/default/objects/Program__c/fields/Percent_Correct__c.field-meta.xml
<CustomField>
    <fullName>Percent_Correct__c</fullName>
    <label>Percent Correct</label>
    <inlineHelpText>The overall Percent Correct of objectives tested in this Program. Calculated by Stats Gatherer.</inlineHelpText>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>