force-app/main/default/objects/Program__c/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <externalId>true</externalId>
    <label>PID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>