force-app/main/default/objects/Program__c/fields/Prompted__c.field-meta.xml
<CustomField>
    <fullName>Prompted__c</fullName>
    <inlineHelpText>The total number of Prompted responses for Objectives associated with this Program. Calculated by Stats Gatherer.</inlineHelpText>
    <label>Prompted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>