force-app/main/default/objects/Program__c/fields/SD_Active_Count__c.field-meta.xml
<CustomField>
    <fullName>SD_Active_Count__c</fullName>
    <label>SD Active Count</label>
    <summaryFilterItems>
        <field>SD__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>SD__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>