force-app/main/default/objects/Program__c/fields/SD_Count__c.field-meta.xml
<CustomField>
    <fullName>SD_Count__c</fullName>
    <label>SD Count</label>
    <summaryForeignKey>SD__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>