force-app/main/default/objects/Program__c/fields/Sessions__c.field-meta.xml
<CustomField>
    <fullName>Sessions__c</fullName>
    <label>Sessions</label>
    <inlineHelpText>The total number of Sessions associated with this Program. Calculated by Stats Gatherer.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>