force-app/main/default/objects/Program__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage One</fullName>
            </value>
            <value>
                <fullName>Stage Two</fullName>
            </value>
            <value>
                <fullName>Stage Three</fullName>
            </value>
            <value>
                <fullName>Stage Four</fullName>
            </value>
            <value>
                <fullName>School Skills</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>