force-app/main/default/objects/Program__c/listViews/Active_Programs.listView-meta.xml
<ListView>
    <fullName>Active_Programs</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SD_Active_Count__c</columns>
    <columns>SD_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Programs</label>
</ListView>