force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>SD_Active_Count__c</columns>
    <columns>SD_Count__c</columns>
    <columns>PID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>