force-app/main/default/objects/Program__c/listViews/Inactive_and_Draft_Programs.listView-meta.xml
<ListView>
    <fullName>Inactive_and_Draft_Programs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SD_Active_Count__c</columns>
    <columns>SD_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive,Draft</value>
    </filters>
    <label>Inactive and Draft Programs</label>
</ListView>